# SubtitleMaker

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  run.py
config/: default.yaml  languages.yaml  styles.yaml
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: Layout.tsx
frontend/src/components/ui/: button.tsx
frontend/src/hooks/: useTranscription.ts
frontend/src/services/: transcription.ts
frontend/src/types/: index.ts
frontend/src/views/: IndexPage.tsx  LibraryPage.tsx  SettingsPage.tsx  TranscribePage.tsx
src/: __init__.py
src/api/: dependencies.py  main.py  schemas.py
src/api/routes/: health.py  jobs.py  styles.py  transcribe.py
src/core/: __init__.py  subtitle_formatter.py  transcriber.py  video_processor.py
src/models/: __init__.py  config.py  job.py  subtitle.py
src/services/: transcription_service.py
src/utils/: logger.py  validators.py
tests/: __init__.py  conftest.py  test_api.py  test_subtitle_formatter.py  test_subtitle_models.py
